Fixed left margin for flattr button in collapsed menu

--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ img.leftfloat
 
 .navbar-nav li iframe {
     margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+	margin-left: 15px;
 }
 .badge {
 	background-color: #C94F4F;
